[tool.poetry]
name = "snowdev"
version = "0.1.4"
description = "snowdev is a Python package that allows you to deploy Snowflake UDFs, stored procedures, tasks, streamlit from your local environment using snowpark"
authors = ["kaarthik <kaarthikandavar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/kaarthik108/snowdev"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"
pydantic = "1.10.9"
termcolor = "2.3.0"
"snowflake-snowpark-python" = { version = "1.5.1", extras = ["pandas"] }
pyyaml = "^6.0.1"
toml = "^0.10.2"
openai = "^0.27.8"
langchain = "^0.0.265"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[tool.poetry.scripts]
snowdev = "snowdev.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"